[package]
name = "iroh-services"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "p2p quic connections dialed by public key"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-services"
keywords = ["quic", "networking", "holepunching", "p2p"]
rust-version = "1.81"

[dependencies]
anyhow = "1.0.95"
iroh = { version = "0.33", features = ["test-utils"] }
iroh-blobs = "0.33"
n0-future = "0.1.2"
serde = { version = "1.0.217", features = ["derive"] }
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
uuid = { version = "1.12.1", features = ["v4", "serde"] }
rcan = { git = "https://github.com/dignifiedquire/rcan", branch = "main" }
ed25519-dalek = "2.1.1"
ssh-key = { version = "0.6.7", features = ["ed25519"] }
tokio = "1.43.0"
iroh-metrics = "0.31.0"
tracing = "0.1.41"
rand = "0.8"

[features]
bin = ["iroh-blobs/rpc"]
