[package]
name = "iroh-services"
version = "0.11.0"
edition = "2024"
readme = "README.md"
description = "p2p quic connections dialed by public key"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-services"
keywords = ["quic", "networking", "holepunching", "p2p"]
rust-version = "1.89"

[dependencies]
anyhow = "1.0.95"
derive_more = { version = "2.0.1", features = ["display", "from"] }
ed25519-dalek = { version = "3.0.0-pre.1" }
irpc = { version = "0.12.0", default-features = false, features = ["derive", "stream", "spans"] }
irpc-iroh = { version = "0.12.0" }
iroh = { version = "0.96", default-features = false }
iroh-metrics = { version = "0.38", default-features = false }
iroh-tickets = "0.3"
n0-error = "0.1"
n0-future = "0.3"
rcan = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1", default-features = false, features = ["sync"] }
tracing = "0.1.41"
uuid = { version = "1.17", features = ["v4", "serde", "v7", "js"] }
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "fmt",
    "json",
] }
serde_json = "1.0.140"
bytes = { version = "1.10.1", features = ["serde"] }
futures-buffered = "0.2.12"
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.9.2"

# optional dependencies
ssh-key = { version = "0.7.0-rc.3", features = ["ed25519"], optional = true }
quinn = { package = "iroh-quinn", version = "0.16.0", default-features = false, optional = true }
time = { version = "0.3.41", features = ["serde", "serde-well-known"], optional = true }
tokio-util = { version = "0.7.16", optional = true }
portmapper = { version = "0.14", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.2", features = ["wasm_js"] }

[build-dependencies]
built = { version = "0.7", features = ["cargo-lock"] }

[dev-dependencies]
temp_env_vars = "0.2.1"
tokio = { version = "1.45", features = ["macros", "rt", "rt-multi-thread"] }


[features]
default = ["client"]
client = []
client_host = []
net_diagnostics = ["dep:portmapper"]
ssh-key = [
    "dep:ssh-key"
]
simulation = [
 "dep:quinn",
 "dep:time",
 "dep:tokio-util"
]

[[example]]
name = "net_diagnostics"
required-features = ["net_diagnostics", "client_host"]
