[package]
name = "iroh-services"
version = "1.0.0-rc.1"
edition = "2024"
readme = "README.md"
description = "p2p quic connections dialed by public key"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-services"
keywords = ["quic", "networking", "holepunching", "p2p"]
rust-version = "1.91"

[dependencies]
anyhow = "1.0.95"
data-encoding = "2.9.0"
derive_more = { version = "2.0.1", features = ["display", "from"] }
ed25519-dalek = { version = "=3.0.0-pre.7" }
irpc = { version = "0.16", default-features = false, features = ["derive", "stream", "spans"] }
irpc-iroh = "0.16"
iroh = { version = "=1.0.0-rc.1", default-features = false }
iroh-metrics = { version = "=1.0.0-rc.0", default-features = false }
iroh-tickets = "=1.0.0-rc.1"
n0-error = "=1.0.0-rc.0"
n0-future = "0.3"
rcan = "0.3.1"
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1", default-features = false, features = ["sync"] }
tracing = "0.1.41"
uuid = { version = "1.17", features = ["v4", "serde", "v7", "js"] }
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "fmt",
    "json",
] }
serde_json = "1.0.140"
bytes = { version = "1.10.1", features = ["serde"] }
futures-buffered = "0.2.12"
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.10.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
base64 = "0.22"
portmapper = "0.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[build-dependencies]
built = { version = "0.8", features = ["cargo-lock"] }

[dev-dependencies]
rand = { version = "0.10", features = ["chacha"] }
temp_env_vars = "0.2.1"
tokio = { version = "1.45", features = ["macros", "rt", "rt-multi-thread", "signal"] }


[features]
default = []

[[example]]
name = "net_diagnostics"
